# Log-Analyser

./: .gitignore  CMakeLists.txt  Infos.cpp  Infos.h  InfosStorage.cpp  InfosStorage.h  Lecture.cpp  Lecture.h  Lecture1.cpp  README.md  Statistic.cpp  Statistic.h  analog  court.dot  exemple-mini-non-exhaustif.txt  main.cpp  makefile
Fichiers Fournis-20240115/: exemple-mini-non-exhaustif.txt
Tests/: results.csv  test.sh
Tests/Test1/: description  run  std.out
